Adding GA on all pages

--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -1,6 +1,16 @@
 {% extends "govuk/template.njk" %}
 
 {% block head %}
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id={{ ga4SiteId }}"></script>
+  <script {% if cspNonce %} nonce="{{ cspNonce }}"{% endif %}>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', '{{ ga4SiteId }}');
+  </script>
+
   <link href="{{ '/assets/css/app.css' | assetMap }}" rel="stylesheet" />
 
   {% for js in feComponents.jsIncludes %}
