Fix layout for comments and action and reply page

--- a/server/views/pages/applications/history/index.njk
+++ b/server/views/pages/applications/history/index.njk
@@ -28,7 +28,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="govuk-body govuk-width-container govuk!">
+  <div class="govuk-body govuk-width-container">
     <span class="govuk-caption-xl">{{ title }}</span>
     <h1 class="govuk-heading-xl govuk-!-margin-top-0">History</h1>
 
