add groups route + change app type enum to id

--- a/server/views/pages/log-application/application-details/index.njk
+++ b/server/views/pages/log-application/application-details/index.njk
@@ -33,7 +33,7 @@
         <form method="POST" id="log-details">
           <input type="hidden" name="_csrf" value="{{ csrfToken }}" />
 
-          {% include "./partials/" + applicationType.value + ".njk" %}
+          {% include "./partials/" + applicationType.key + ".njk" %}
 
           {{ govukButton({
             text: "Continue",
