--- a/server/views/pages/applications/view/index.njk
+++ b/server/views/pages/applications/view/index.njk
@@ -39,7 +39,7 @@
     <div class="govuk-grid-column-two-thirds">
       {% include "./partials/application-details.njk" %}
       {% include "./partials/prisoner-details.njk" %}
-      {% include "./partials/" + applicationType.value + ".njk" %}
+      {% include "./partials/" + applicationType + ".njk" %}
     </div>
   </div>
 </div>
