logging journey using apptype id (#266)
* logging journey using apptype id

* Adding page view for general enquiry pin phone and to confirm page

* apps search page, confirm page, fixing tests

--- a/server/views/pages/log-application/confirm/partials/application-details.njk
+++ b/server/views/pages/log-application/confirm/partials/application-details.njk
@@ -23,6 +23,24 @@
 {% else %}
   {% set appTypeActions = {
     items: [{
+      href: "/log/group",
+      text: "Change",
+      visuallyHiddenText: "application group"
+    }]
+  } %}
+{% endif %}
+
+{% set _ = rows.push({
+  key: { text: "Application group" },
+  value: { text: applicationData.group },
+  actions: appTypeActions
+}) %}
+
+{% if isUpdate %}
+  {% set appTypeActions = { items: [] } %}
+{% else %}
+  {% set appTypeActions = {
+    items: [{
       href: "/log/application-type",
       text: "Change",
       visuallyHiddenText: "application type"
