fixing application group display

--- a/server/views/pages/log-application/confirm/partials/application-details.njk
+++ b/server/views/pages/log-application/confirm/partials/application-details.njk
@@ -32,7 +32,7 @@
 
 {% set _ = rows.push({
   key: { text: "Application group" },
-  value: { text: applicationData.group },
+  value: { text: applicationData.group.name or applicationData.group },
   actions: appTypeActions
 }) %}
 
