fix log app for same prisoner

--- a/server/views/pages/log-application/submit/index.njk
+++ b/server/views/pages/log-application/submit/index.njk
@@ -27,7 +27,7 @@
     <p class="govuk-body">You can now log:</p>
     <ul class="govuk-list govuk-list--bullet">
       <li>
-        <a href="/log/application-type?isLoggingForSamePrisoner=true"> another application for {{ prisonerName }}</a>
+        <a href="/log/group?isLoggingForSamePrisoner=true"> another application for {{ prisonerName }}</a>
       </li>
       <li>
         <a href="/log/prisoner-details">a new application</a>
