update filters template with status

--- a/server/views/pages/applications/list/partials/filter.njk
+++ b/server/views/pages/applications/list/partials/filter.njk
@@ -4,6 +4,49 @@
   <input type="hidden" name="status" value="{{ status }}">
 
   {%- set filterOptionsHtml %}
+    {{ govukCheckboxes({
+      idPrefix: "status",
+      name: "status",
+      classes: "govuk-checkboxes--small",
+      fieldset: {
+        legend: {
+          text: "Status",
+          classes: "govuk-fieldset__legend--s"
+        }
+      },
+      items: [
+        {
+          value: "pending",
+          text: "Pending",
+          checked: filters.selectedFilters.status and ("pending" in filters.selectedFilters.status)
+        },
+        {
+          value: "closed",
+          text: "Closed",
+          checked: filters.selectedFilters.status and ("closed" in filters.selectedFilters.status),
+          conditional: {
+            html: govukCheckboxes({
+              idPrefix: "closed-sub",
+              name: "closedSub",
+              classes: "govuk-checkboxes--small",
+              items: [
+                {
+                  value: "approved",
+                  text: "Approved",
+                  checked: true
+                },
+                {
+                  value: "declined",
+                  text: "Declined",
+                  checked: true
+                }
+              ]
+            })
+          }
+        }
+      ]
+    }) }}
+
     {{ accessibleAutocomplete({
       label: "Prisoner name or number",
       nonce: cspNonce,
@@ -24,7 +67,6 @@
       items: filters.priority
     }) }}
 
-    
     {{ govukCheckboxes({
       idPrefix: "group",
       name: "group",
@@ -53,6 +95,13 @@
   {% endset -%}
 
   {% set categories = [] %}
+
+  {% if filters.selectedFilters.status | length %}
+    {% set categories = categories.concat([{
+      heading: { text: "Status" },
+      items: filters.selectedFilters.status
+    }]) %}
+  {% endif %}
 
   {% if filters.selectedFilters.priority | length %}
     {% set categories = categories.concat([{
@@ -98,4 +147,3 @@
     }) }}
   {% endif %}
 </form>
-
