update filtered view

--- a/assets/scss/views/_applications.scss
+++ b/assets/scss/views/_applications.scss
@@ -110,3 +110,9 @@
     display: block !important;
   }
 }
+
+.app-results-table {
+  margin-bottom: 0;
+  padding: 30px 20px 0;
+  border: 1px solid #b1b4b6;
+}
