--- a/assets/scss/views/_applications.scss
+++ b/assets/scss/views/_applications.scss
@@ -112,7 +112,7 @@
 }
 
 .app-results-table {
-  margin-bottom: 0;
-  padding: 30px 20px 0;
-  border: 1px solid #b1b4b6;
+  margin-bottom: govuk-spacing(0);
+  padding: govuk-spacing(6) govuk-spacing(4) 0;
+  border: 1px solid $govuk-border-colour;
 }
