--- a/assets/scss/views/_applications.scss
+++ b/assets/scss/views/_applications.scss
@@ -112,6 +112,6 @@
 }
 
 .app-results-table {
-  padding: govuk-spacing(6) govuk-spacing(4) 0;
+  padding: govuk-spacing(6) govuk-spacing(4) govuk-spacing(0);
   border: 1px solid $govuk-border-colour;
 }
