--- a/assets/scss/views/_applications.scss
+++ b/assets/scss/views/_applications.scss
@@ -110,3 +110,8 @@
     display: block !important;
   }
 }
+
+.app-results-table {
+  padding: govuk-spacing(6) govuk-spacing(4) govuk-spacing(0);
+  border: 1px solid $govuk-border-colour;
+}
