--- a/server/views/pages/applications/list/partials/filter.njk
+++ b/server/views/pages/applications/list/partials/filter.njk
@@ -21,11 +21,20 @@
           checked: filters.selectedStatusValues and ("CLOSED" in filters.selectedStatusValues),
           conditional: {
             html: govukCheckboxes({
+              idPrefix: "status-closed",
               name: "status",
               classes: "govuk-checkboxes--small",
               items: [
-                { value: "APPROVED", html: 'Approved <span class="govuk-visually-hidden">Decision</span>', checked: filters.selectedStatusValues and ("APPROVED" in filters.selectedStatusValues) },
-                { value: "DECLINED", html: 'Declined <span class="govuk-visually-hidden">Decision</span>', checked: filters.selectedStatusValues and ("DECLINED" in filters.selectedStatusValues) }
+                {
+                  value: "APPROVED",
+                  html: 'Approved <span class="govuk-visually-hidden">Decision</span>',
+                  checked: filters.selectedStatusValues and ("APPROVED" in filters.selectedStatusValues)
+                },
+                {
+                  value: "DECLINED",
+                  html: 'Declined <span class="govuk-visually-hidden">Decision</span>',
+                  checked: filters.selectedStatusValues and ("DECLINED" in filters.selectedStatusValues)
+                }
               ]
             })
           }
