apps list ordering

--- a/server/views/pages/applications/list/partials/filter.njk
+++ b/server/views/pages/applications/list/partials/filter.njk
@@ -2,6 +2,30 @@
 
 <form novalidate>
   {%- set filterOptionsHtml %}
+
+    {{ govukRadios({
+      name: "order",
+      classes: "govuk-radios--small",
+      fieldset: {
+        legend: {
+          text: "Order",
+          classes: "govuk-fieldset__legend--s"
+        }
+      },
+      items: [
+        {
+          value: "newest",
+          text: "Newest",
+          checked: not filters.oldestAppFirst
+        },
+        {
+          value: "oldest",
+          text: "Oldest",
+          checked: filters.oldestAppFirst
+        }
+      ]
+    }) }}
+
     {{ govukCheckboxes({
       idPrefix: "status",
       name: "status",
