--- a/server/views/pages/applications/list/partials/results.njk
+++ b/server/views/pages/applications/list/partials/results.njk
@@ -6,7 +6,7 @@
 
     {{ govukTable({
       head: [
-        { text: "Date", attributes: { "aria-sort": "descending" } },
+        { text: "Date" },
         { text: "Application type" },
         { text: "From" },
         { text: "Department" },
