--- a/server/views/pages/applications/list/index.njk
+++ b/server/views/pages/applications/list/index.njk
@@ -4,6 +4,7 @@
 {%- from "govuk/components/table/macro.njk" import govukTable -%}
 {%- from "govuk/components/pagination/macro.njk" import govukPagination -%}
 {%- from "govuk/components/error-summary/macro.njk" import govukErrorSummary -%}
+{% from "govuk/components/radios/macro.njk" import govukRadios %}
 
 {%- from "moj/components/filter/macro.njk" import mojFilter -%}
 
