--- a/assets/scss/views/_applications.scss
+++ b/assets/scss/views/_applications.scss
@@ -115,3 +115,16 @@
   padding: govuk-spacing(6) govuk-spacing(4) govuk-spacing(0);
   border: 1px solid $govuk-border-colour;
 }
+
+.app-type-filter {
+  &-scroll-box {
+    max-height: 300px;
+    overflow: hidden;
+    overflow-y: scroll;
+    padding-bottom: govuk-spacing(1);
+  }
+
+  &-checkbox-wrapper {
+    margin-top: -20px;
+  }
+}
