--- a/server/views/pages/applications/list/partials/results.njk
+++ b/server/views/pages/applications/list/partials/results.njk
@@ -2,7 +2,7 @@
 
 <div class="app-results-table">
   {% if apps.length %}
-    <h2 class="govuk-heading-m">{{ pagination.totalCount }} applications</h2>
+    <h2 class="govuk-heading-m">Showing {{ pagination.totalCount }} applications</h2>
 
     {{ govukTable({
       head: [
