fix template name

--- a/server/views/pages/applications/action/macro.njk
+++ b/server/views/pages/applications/action/macro.njk
@@ -10,7 +10,7 @@
     {% if applicationType.name in [
       "Add a social PIN phone contact",
       "Add an official PIN phone contact",
-      "Add or remove a PIN phone contact"
+      "Remove a PIN phone contact"
     ] %}
     <div class="govuk-summary-list__row">
       <dt class="govuk-summary-list__key">Contact</dt>
